# cppargparse

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  DOXYMAIN.md  Doxyfile  LICENSE  README.md  gcovr.cfg  lcovrc
docker/: Dockerfile
docs/: index.html
docs/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/cppargparse/: algorithm.h.func-sort-c.html  algorithm.h.func.html  algorithm.h.gcov.html  errors.h.func-sort-c.html  errors.h.func.html  errors.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  parser.h.func-sort-c.html  parser.h.func.html  parser.h.gcov.html
docs/coverage/cppargparse/arguments/: double.h.func-sort-c.html  double.h.func.html  double.h.gcov.html  float.h.func-sort-c.html  float.h.func.html  (+20 more)
docs/html/: algorithm_8h.html  algorithm_8h__dep__incl.map  algorithm_8h__dep__incl.md5  algorithm_8h__incl.map  algorithm_8h__incl.md5  algorithm_8h_source.html  annotated.html  arguments_8h.html  arguments_8h__dep__incl.map  arguments_8h__dep__incl.md5  arguments_8h__incl.map  arguments_8h__incl.md5  arguments_8h_source.html  base_8h_source.html  classcppargparse_1_1errors_1_1CommandLineArgumentError-members.html  classcppargparse_1_1errors_1_1CommandLineArgumentError.html  classcppargparse_1_1errors_1_1CommandLineArgumentError__coll__graph.map  classcppargparse_1_1errors_1_1CommandLineArgumentError__coll__graph.md5  classcppargparse_1_1errors_1_1CommandLineArgumentError__inherit__graph.md5  classcppargparse_1_1errors_1_1CommandLineOptionError-members.html  classcppargparse_1_1errors_1_1CommandLineOptionError.html  classcppargparse_1_1errors_1_1CommandLineOptionError__coll__graph.map  classcppargparse_1_1errors_1_1CommandLineOptionError__coll__graph.md5  classcppargparse_1_1errors_1_1CommandLineOptionError__inherit__graph.md5  classcppargparse_1_1errors_1_1Error-members.html  classcppargparse_1_1errors_1_1Error.html  classcppargparse_1_1errors_1_1Error__coll__graph.map  classcppargparse_1_1errors_1_1Error__coll__graph.md5  classcppargparse_1_1errors_1_1Error__inherit__graph.map  classcppargparse_1_1errors_1_1Error__inherit__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser-members.html  classcppargparse_1_1parser_1_1ArgumentParser.html  classcppargparse_1_1parser_1_1ArgumentParserBase-members.html  classcppargparse_1_1parser_1_1ArgumentParserBase.html  classcppargparse_1_1parser_1_1ArgumentParserBase__inherit__graph.map  classcppargparse_1_1parser_1_1ArgumentParserBase__inherit__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser__coll__graph.map  classcppargparse_1_1parser_1_1ArgumentParser__coll__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser__inherit__graph.md5  classes.html  (+101 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_3.js
docs/latex/: algorithm_8h.tex  algorithm_8h__dep__incl.md5  algorithm_8h__incl.md5  annotated.tex  arguments_8h.tex  arguments_8h__dep__incl.md5  arguments_8h__incl.md5  classcppargparse_1_1errors_1_1CommandLineArgumentError.tex  classcppargparse_1_1errors_1_1CommandLineArgumentError__coll__graph.md5  classcppargparse_1_1errors_1_1CommandLineArgumentError__inherit__graph.md5  classcppargparse_1_1errors_1_1CommandLineOptionError.tex  classcppargparse_1_1errors_1_1CommandLineOptionError__coll__graph.md5  classcppargparse_1_1errors_1_1CommandLineOptionError__inherit__graph.md5  classcppargparse_1_1errors_1_1Error.tex  classcppargparse_1_1errors_1_1Error__coll__graph.md5  classcppargparse_1_1errors_1_1Error__inherit__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser.tex  classcppargparse_1_1parser_1_1ArgumentParserBase.tex  classcppargparse_1_1parser_1_1ArgumentParserBase__inherit__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser__coll__graph.md5  classcppargparse_1_1parser_1_1ArgumentParser__inherit__graph.md5  cppargparse_8h.tex  cppargparse_8h__incl.md5  dir_05bfffcdca4d90bde7caab1d36344a9a.tex  dir_598f272a69da35214b4516a86e15ca8d.tex  dir_598f272a69da35214b4516a86e15ca8d_dep.md5  dir_ba72e50f8e230e861441ab9dd0dc69a4.tex  files.tex  hierarchy.tex  index.tex  md_README.tex  numerical_8h.tex  numerical_8h__dep__incl.md5  numerical_8h__incl.md5  refman.tex  structcppargparse_1_1argument.tex  structcppargparse_1_1argument_3_01double_01_4.tex  structcppargparse_1_1argument_3_01float_01_4.tex  structcppargparse_1_1argument_3_01int_01_4.tex  structcppargparse_1_1argument_3_01long_01_4.tex  (+12 more)
include/: CMakeLists.txt
include/cppargparse/: algorithm.h  arguments.h  cmd.h  cppargparse.h  errors.h  globals.h  parser.h  types.h
include/cppargparse/argument/: argument.h  char.h  double.h  float.h  int.h  long.h  numerical.h  string.h  vector.h
include/cppargparse/arguments/: argument.h  char.h  container.h  default.h  double.h  float.h  int.h  long.h  numerical.h  string.h  vector.h
include/cppargparse/parser/: base.h  errors.h  parser.h
include/cppargparse/type_traits/: default.h  double.h  float.h  int.h  string.h  stub.h  type_traits.h  type_traits_double.h  type_traits_float.h  type_traits_int.h  type_traits_string.h  type_traits_stub.h  vector.h
samples/: CMakeLists.txt  readme_sample.cpp
samples/callback/: required.cpp  usage.cpp
samples/traditional/: required.cpp  usage.cpp
scripts/: build  filterbr.py  run
src/: CMakeLists.txt  parser.h
src/type_traits/: type_traits.h  type_traits_double.h  type_traits_float.h  type_traits_int.h  type_traits_string.h  type_traits_stub.h
test/: CMakeLists.txt  main.cpp  test_algorithm.cpp  test_arguments.cpp  test_common.h  test_double.cpp  test_error.cpp  test_flag.cpp  test_float.cpp  test_int.cpp  test_parser.cpp  test_string.cpp  test_vector.cpp
test/numerical/: test_int.cpp  test_numerical.cpp  test_numerical.h
